# VulkanGI

./: .gitignore  CMakeLists.txt  compile_shaders.py  imgui.ini
src/: camera.hpp  compute_pass.hpp  config.hpp  cubemap_shadow.cpp  cubemap_shadow.hpp  driverstate.hpp  frame_global.hpp  gbufferpass.cpp  light_field_probes.cpp  lightfield_probes.hpp  main.cpp  postprocessing.hpp  render_oct.hpp  renderer.cpp  renderer.hpp  scene.cpp  scene.hpp  shading.hpp  shdebug_subpass.hpp  shpherical_harmonics.hpp  spherical_harmonics.cpp  triangle.hpp
src/drv/: buffers.cpp  cmd_utils.cpp  cmd_utils.hpp  common.hpp  context.cpp  context.hpp  descriptors.cpp  descriptors.hpp  draw_context.cpp  draw_context.hpp  images.cpp  imgui_context.cpp  imgui_context.hpp  memory.cpp  memory.hpp  pipeline.cpp  pipeline.hpp  pipeline_layout.cpp  rcstorage.hpp  renderpass.hpp  resources.hpp
src/shaders/: cube_probe.frag  cube_probe.vert  cube_probe_to_oct.frag  cube_probe_to_oct_depth.frag  cube_shadow.frag  cube_shadow.vert  cube_shadow_to_oct.frag  cubemap_to_oct.frag  cubemap_verts.vert  frag.spv  hi_dist_mips.comp  integrate_sh.comp  irradiance.comp  oct_fold.comp  pass.vert  sh_draw.frag  shading.frag  triangle.frag  triangle.vert  vert.spv
src/shaders/include/: brdf.glsl  constants.glsl  oct_coord.glsl  raytracing.glsl  real_sh.glsl  shadows.glsl  trace_probe.glsl
